--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-    "tabWidth": 4,
-    "singleQuote": true
+	"semi": true,
+	"useTabs": true,
+	"tabWidth": 4,
+	"printWidth": 100,
+	"singleQuote": true,
+	"trailingComma": "all",
+	"jsxBracketSameLine": true
 }
